# ML-Tongue-Pred

./: .gitignore  LICENSE  README.md  keep_awake.py  main.py  pyproject.toml
.github/workflows/: keep_awake.yml
app/: app.py  base_app.py  config.py  deployment_prep.ipynb  display_functions.py  prep_models_for_deployment.ipynb  shap_utils.py  thresholds.joblib  utils.py
app/all_preds/: asp.parquet  asp_lr.parquet  bleed.parquet  bleed_lgbm.parquet  mort.parquet  reop.parquet  reop_svc.parquet  reoper_lgbm.parquet  surg.parquet  surg_svc.parquet
app/bin_thresholds/: any_xgb.npz  asp.npz  asp_lr.npz  bleed.npz  bleed_lgbm.npz  mort.npz  reop.npz  reop_svc.npz  serious_xgb.npz  surg.npz  (+2 more)
notebooks/: 00_CPT_ICD_extract.ipynb  01_data_cleaning.ipynb  02_EDA.ipynb  02_Preprocessing.ipynb  03_Summary_Analysis.ipynb  03_feat_eng.ipynb  04_Preprocessing.ipynb  04_summary_analysis.ipynb  05_model_tuning.ipynb  05_tune.ipynb  06_neural_network.ipynb  06a_permutation.ipynb  07A_perm.ipynb  07_stacked_gen.ipynb  08_calibrate.ipynb  09A_format_eval.ipynb  09_evaluation.ipynb  10_sig_test.ipynb  11_feat_imp.ipynb  11_feat_importance.ipynb  12_DCA.ipynb  13A_nsqip_proba_clean.ipynb  13B_nsqip_compare.ipynb  13C_nsqip_format.ipynb
preprocessors/: preprocessor_outcome_asp.joblib  preprocessor_outcome_bleed.joblib  preprocessor_outcome_mort.joblib  preprocessor_outcome_surg.joblib
src/: clean_filter.py  config.py  data_utils.py  evaluate.py  feat_imp.py  feat_importance.py  feat_select.py  nn_models.py  nsqip_eval.py  preprocess.py  sig.py  summary_analysis.py  swarm.py  tune.py
(+125 files in other folders)
