[project]
name = "ml-tongue-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "keras>=3.11.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlstatkit",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scikit-posthocs>=0.11.4",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "sigfig>=1.3.19",
    "statkit>=1.0.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
    "torch>=2.8.0",
]

[tool.uv.sources]
mlstatkit = { git = "https://github.com/AnthonyMatarr/MLstatkit.git" }
